Fixes #15
- Fix a typo in the security policy file
- Reference the security policy file for tests

Signed-off-by: Scott Stults <sstults@opensourceconnections.com>